[package]
name = "esc-api"
version = "0.1.0"
edition = "2021"
default-run = "esc-api"

[[bin]]
name = "cli"
path = "src/cli/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.10.0"
firestore = "0.32.0"
jsonwebtoken = "8.3.0"
reqwest = "0.11.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
figment = { version = "0.10.8", features = ["toml"] }
inquire = "0.6.2"
fuzzy-matcher = "0.3.7"
tokio = {version = "1.28.1", features = ["rt-multi-thread"]}
