[package]
name = "esc-api"
version = "0.1.0"
edition = "2021"
default-run = "esc-api"

[[bin]]
name = "cli"
path = "src/cli/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.10.2"
env_logger = "0.11.8"
firestore = "0.45.0"
jsonwebtoken = "9.3.1"
reqwest = "0.12.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
figment = { version = "0.10.8", features = ["toml"] }
inquire = "0.6.2"
fuzzy-matcher = "0.3.7"
tokio = {version = "1.44.2", features = ["rt-multi-thread"]}
rand = "0.8.5"
chrono = "0.4.41"
time = "0.3.35"
